<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    tools:context="com.a000webhostapp.trackingdaily.dumpit.SweeperIDActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/lockIcon_sw"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_lock" />

        <EditText
            android:id="@+id/verifyTxt_sw_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/mProgressbar_sw_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mlpb_progress_text_visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/verificationStatus_sw_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/descript_verify_11"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/verifyButton_sw_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/action_verify"/>
    <Button
        android:id="@+id/finishButton_sw_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_1"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/action_next"/>

    <Button
        android:id="@+id/cancelButton_sw_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/select_2"
        android:padding="15dp"
        android:text="@string/action_cancel"
        android:textColor="@color/txt"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
